<resources>
    <string name="app_name">Reaction Timer</string>

    <string name="welcome">Welcome!</string>
    <string name="start">Tap Anywhere To Test Your Reaction!</string>
    <string name="action_settings">Settings</string>
    <string name="default_time">000</string>
    <string name="redo">Tap to Try Again</string>
    <string name="wait">Wait For It&#8230;</string>
    <string name="save_button">Press to Save</string>
    <string name="scores">View Past Scores</string>
    <string name="tryagain">Tap to try again!</string>
    <string name="empty_list">No Saved Scores!</string>
    <string name="view_leaderboard">Leaderboard</string>
    <string name="too_soon">Too Soon!</string>
    <string name="high_scores">High Scores!</string>
    <string name="achievements">Achievements</string>

</resources>
