<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ad00"
    android:orientation="vertical">

    <ListView
        android:id="@+id/scoreGrid"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/adMob"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/empty_list"
        android:textAppearance="?android:attr/textAppearanceLarge"
        ads:layout_constraintBottom_toTopOf="@+id/adMob"
        ads:layout_constraintEnd_toStartOf="@+id/scoreGrid"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/scoreGrid"
        ads:layout_constraintTop_toTopOf="@+id/scoreGrid"
        tools:layout_conversion_absoluteHeight="30dp"
        tools:layout_conversion_absoluteWidth="172dp"
        tools:layout_conversion_absoluteX="106dp"
        tools:layout_conversion_absoluteY="392dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/redo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        ads:layout_constraintBottom_toTopOf="@+id/scoreGrid"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:alpha=".50"
        android:gravity="center"
        android:text="@string/default_time"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        ads:layout_constraintBottom_toTopOf="@+id/scoreGrid"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/view_leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/view_leaderboard"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.07"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/view_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/achievements"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.07"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8228328083341151/4312055823"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>